Admin register and order delete
